improve image link label

--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -4,7 +4,7 @@
     "ANCHOR_BUTTON_TOOLTIP": "Erstelle Link zu diesem Element",
     "VOL_WORK_TITLE": "Band {{volumeNumber}}: {{title}}",
     "VOL_WORK_TITLE_ALT": "{{title}} (Band {{volumeNumber}})",
-    "IMAGE": "Bild"
+    "IMAGE": "Abb."
   },
 
   "NAVBAR": {
