add tooltips to page:line and work abbreviation

--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -115,6 +115,7 @@
         "TOTAL": "Gesamtzahl Suchergebnisse",
         "VOLUME": "Band"
       },
+      "PAGINATION_NOTE": "[Seite:Zeile] in der Akademie-Ausgabe",
       "NAV_FULLTEXT_BTN": {
         "TEXT": "Volltext",
         "TOOLTIP": "Zum Absatz im Volltext springen"
